--- a/msvc_test/msvc_test.vcxproj.filters
+++ b/msvc_test/msvc_test.vcxproj.filters
@@ -15,21 +15,12 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="stdafx.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="targetver.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\til.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stdafx.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="msvc_test.cpp">
+    <ClCompile Include="msvc_test.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
